<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Agora Chat</string>
    <string name="loading">Loading&#8230;</string>
    <string name="request">Requesting&#8230;</string>
    <string name="ok">Enter</string>
    <string name="Network_error">Network error</string>
    <string name="network_disconnect">Network disconnected</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_not_exist">Username does not exist</string>
    <string name="username_too_long">Please choose a shorter username</string>
    <string name="search_text_hint">Search</string>
    <string name="please_check"> AppId verification error! Please check the appid settings in the local.properties file.</string>
    <string name="sign_agora_id">Agora ID</string>
    <string name="sign_password">Password</string>
    <string name="sign_confirm_pwd">Confirm Password</string>
    <string name="sign_login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="Sign_register">Sign Up</string>
    <string name="sign_register_suc">Sign Up Successful</string>
    <string name="sign_error_illegal_character">Only Latin letters and numbers are allowed</string>
    <string name="sign_error_not_id">Please enter an Agora ID</string>
    <string name="sign_error_not_nickname">Please enter a password</string>
    <string name="sign_check_pwd">The two passwords do not match</string>
    <string name="sign_gcm_key">server_key_gcm</string>
    <string name="error_network_error">Network unavailable</string>
    <string name="error_not_login">You are not logged in</string>
    <string name="error_parse_error">Parsing error</string>
    <string name="error_err_unknown">Network error, please try again later</string>
    <string name="err_image_android_min_version">Image upload is only supported in Android version 4.4 and above</string>
    <string name="err_file_not_exist">File does not exist</string>
    <string name="error_add_self">You cannot add yourself</string>
    <string name="error_already_friend">This user is already in your friend list</string>
    <string name="error_already_friend_but_in_black">This user is already in your friend list but is currently blocked. Please remove this user from the blocked list.</string>
    <string name="error_delete_not_exist_msg">Failed to delete message or this message does not exist</string>
    <string name="error_group_no_members">No group members</string>
    <string name="error_user_already_exist">Username already exists, please enter another one</string>
    <string name="error_delete_conversation">Failed to delete conversation or this conversation does not exist</string>
    <string name="error_message_external_logic_blocked">Message blocked by content moderation</string>
    <string name="dialog_default_title">Prompt</string>
    <string name="main_title_home">Chats</string>
    <string name="main_title_contacts">Contacts</string>
    <string name="main_title_me">Me</string>
    <string name="contact_tab_title_friends">Friends</string>
    <string name="contact_tab_title_groups">Groups</string>
    <string name="contact_tab_title_requests">Requests</string>
    <string name="contact_request_notification_accept">Accept</string>
    <string name="group_member_add_admin">%1$s is already an administrator</string>
    <string name="group_member_remove_admin">%1$s is no longer an administrator</string>
    <string name="group_member_add_black">%1$s is already added to the blocked list</string>
    <string name="group_member_remove_black">%1$s is already removed from the blocked list</string>
    <string name="group_member_mute">%1$s is already muted</string>
    <string name="group_member_remove_mute">%1$s is already unmuted</string>
    <string name="group_member_remove">%1$s has already been removed</string>
    <string name="group_member_invite">Group invitation has already been sent to %1$s</string>
    <string name="group_destroy">Group has already been deleted</string>
    <string name="group_role_owner">Group Owner</string>
    <string name="group_role_admin">Admin</string>
    <string name="group_permission_mute">Mute</string>
    <string name="group_admin_muted">Admin/Mute</string>
    <string name="group_new_group">New Group</string>
    <string name="group_authoried_to_join">Authorized to Join</string>
    <string name="group_join_a_group">Join a Group</string>
    <string name="group_join">Join</string>
    <string name="group_join_this_group">Join this Group</string>
    <string name="group_public_group_list">Public Group List</string>
    <string name="group_public_group">Public Groups</string>
    <string name="group_apply">Apply</string>
    <string name="group_applying">Applying</string>
    <string name="group_applied">Applied</string>
    <string name="group_add_contacts">Add Contacts</string>
    <string name="group_add_members">Add Members</string>
    <string name="group_invitation_members_notification">Invitation has been sent</string>
    <string name="group_contacts">Contacts</string>
    <string name="group_chat_members">Group Members</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group description is not required</string>
    <string name="group_maximum_member">Maximum group size</string>
    <string name="group_set_to_a_public_group">Set as a Public Group</string>
    <string name="group_no_more_than">No More Than 3000</string>
    <string name="group_allow_members_to_invite">Allow Members to Invite</string>
    <string name="group_joined">You have joined the group</string>
    <string name="public_group_information">Public Group Info</string>
    <string name="group_owner">Group Owner</string>
    <string name="public_group_introduce">Introduction</string>
    <string name="public_group_introduce_hint">No Introduction</string>
    <string name="public_group_verification_information">Enter the verification info</string>
    <string name="public_group_request_to_join">Request to Join</string>
    <string name="public_group_add">Join Group Chat</string>
    <string name="send_the_request_is">Request sent. Please wait for the group owner to approve your request.</string>
    <string name="join_the_group_chat">You\'ve joined the group chat</string>
    <string name="group_new_success">Group created</string>
    <string name="group_new_invite_join_group">%1$s invited you to join group: %2$s</string>
    <string name="group_new_member_limit">Member quantity: 3 to 3000</string>
    <string name="group_new_name_cannot_be_empty">Complete the group info</string>
    <string name="show_agora_chat_id">Agora ID: %1$s</string>
    <string name="show_agora_group_id">Group ID: %1$s</string>
    <string name="contact_detail_block_contact">Block Contact</string>
    <string name="contact_detail_delete_contact">Delete Contact</string>
    <string name="contact_detail_add_contact">Add Contacts</string>
    <string name="contact_detail_start_chat">Chat</string>
    <string name="contact_detail_block_title">Block this contact now?</string>
    <string name="contact_detail_block_content">When you block this contact, you will not receive any messages from them</string>
    <string name="contact_detail_block_confirm_text">Block</string>
    <string name="contact_detail_delete_title">Delete this contact?</string>
    <string name="contact_detail_delete_content">Delete this contact and associated chats</string>
    <string name="contact_detail_delete_confirm_text">Delete</string>
    <string name="contact_add">Add</string>
    <string name="contact_adding">Adding</string>
    <string name="contact_added">Added</string>
    <string name="contact_add_contacts">Add Contacts</string>
    <string name="add_contact_add_a_friend">Add me as a friend</string>
    <string name="add_contact_send_successful">Friend request sent</string>
    <string name="account_logoff_notification">Offline notification</string>
    <string name="account_connect_conflict">This account is already logged in on another device</string>
    <string name="account_user_remove">This user has already been removed</string>
    <string name="account_user_forbidden">User connection restricted by the server</string>
    <string name="contact_listener_onContactAdded">You have added %1$s as a friend</string>
    <string name="contact_listener_onContactDeleted">You have deleted your friend %1$s</string>
    <string name="contact_listener_onContactDeleted_by_other">%1$s has unfriended you</string>
    <string name="contact_listener_onContactInvited">%1$s wants to be your friend. Please accept the request.</string>
    <string name="contact_listener_onFriendRequestAccepted">Your friend request has been accepted</string>
    <string name="contact_listener_onFriendRequestDeclined">%1$s has declined your friend request</string>
    <string name="multi_device_contact_accept">Accept friend request from %1$s [remote]</string>
    <string name="multi_device_contact_decline">Decline friend request from %1$s [remote]</string>
    <string name="multi_device_contact_add">Send friend request to %1$s [remote]</string>
    <string name="multi_device_contact_ban">Add %1$s to the blocked list [remote]</string>
    <string name="multi_device_contact_allow">Remove %1$s from the blocked list [remote]</string>
    <string name="multi_device_group_create">Create a group [remote]</string>
    <string name="multi_device_group_destroy">Disband the group [remote]</string>
    <string name="multi_device_group_join">Join the group [remote]</string>
    <string name="multi_device_group_leave">Leave the group [remote]</string>
    <string name="multi_device_group_apply">Apply to join the group [remote]</string>
    <string name="multi_device_group_apply_accept">Accept %1$s\'s request to join the group [remote]</string>
    <string name="multi_device_group_apply_decline">Reject %1$s\'s request to join the group [remote]</string>
    <string name="multi_device_group_invite">Invite %1$s to join the group [remote]</string>
    <string name="multi_device_group_invite_accept">Accept %1$s\'s invitation to join the group [remote]</string>
    <string name="chat_setting_search">Search Message History</string>
    <string name="chat_setting_clear">Clear Message History</string>
    <string name="chat_setting_mute_notification">Mute Notifications</string>
    <string name="chat_setting_to_top">Pin to Top</string>
    <string name="chat_setting_auto_translation">Auto Translation</string>
    <string name="group_detail_members">Members</string>
    <string name="group_detail_notice">Group Notice</string>
    <string name="group_detail_files">Group Files</string>
    <string name="group_detail_transfer">Transfer Ownership</string>
    <string name="group_detail_disband_group">Disband Group</string>
    <string name="group_detail_leave_group">Leave Group</string>
    <string name="me_setting">Settings</string>
    <string name="me_setting_general">General</string>
    <string name="me_setting_notifications">Notifications</string>
    <string name="me_setting_privacy">Privacy</string>
    <string name="me_setting_about">About</string>
    <string name="me_setting_logins">Logins</string>
    <string name="me_setting_logout">Log Out</string>
    <string name="about_title">About</string>
    <string name="about_sdk_version">SDK Version</string>
    <string name="about_lib_version">UI Library Version</string>
    <string name="about_policy">Legal and Policies</string>
    <string name="about_more">More</string>
    <string name="about_net_addr">Agora.io</string>
    <string name="thread_menu_members">Thread Members</string>
    <string name="thread_menu_notifications">Thread Notifications</string>
    <string name="thread_menu_edit">Edit Thread</string>
    <string name="thread_menu_leave">Leave Thread</string>
    <string name="thread_menu_disband">Disband Thread</string>
</resources>