<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_tophalf_corner_10"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_drag_handle" />

    <io.agora.chatdemo.general.widget.ArrowItemView
        android:id="@+id/item_search_message"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:foreground="@drawable/ease_ripple_click_gray"
        app:arrowItemAvatarHeight="32dp"
        app:arrowItemTitleStyle="bold"
        app:arrowItemAvatarSrc="@drawable/chat_settings_search"
        app:arrowItemAvatarWidth="32dp"
        app:arrowItemShowArrow="true"
        app:arrowItemShowAvatar="true"
        app:arrowItemTitle="@string/chat_setting_search"
        app:arrowItemTitleColor="@color/black"
        app:arrowItemTitleSize="16sp" />

    <io.agora.chatdemo.general.widget.ArrowItemView
        android:id="@+id/item_clear_history"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:foreground="@drawable/ease_ripple_click_gray"
        app:arrowItemAvatarHeight="32dp"
        app:arrowItemTitleStyle="bold"
        app:arrowItemAvatarSrc="@drawable/chat_settings_clear"
        app:arrowItemAvatarWidth="32dp"
        app:arrowItemShowArrow="false"
        app:arrowItemShowAvatar="true"
        app:arrowItemTitle="@string/chat_setting_clear"
        app:arrowItemTitleColor="@color/black"
        app:arrowItemTitleSize="16sp" />

    <io.agora.chatdemo.general.widget.SwitchItemView
        android:id="@+id/item_mute_notification"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:switchItemAvatarHeight="32dp"
        app:switchItemAvatarSrc="@drawable/chat_settings_mute"
        app:switchItemAvatarWidth="32dp"
        app:switchItemTitleStyle="bold"
        app:switchItemShowAvatar="true"
        app:switchItemShowDivider="false"
        app:switchItemTitle="@string/chat_setting_mute_notification"
        app:switchItemTitleColor="@color/black"
        app:switchItemTitleSize="16sp" />

    <io.agora.chatdemo.general.widget.SwitchItemView
        android:id="@+id/item_to_top"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:switchItemAvatarHeight="32dp"
        app:switchItemAvatarSrc="@drawable/chat_settings_top"
        app:switchItemAvatarWidth="32dp"
        app:switchItemTitleStyle="bold"
        app:switchItemShowAvatar="true"
        app:switchItemShowDivider="false"
        app:switchItemTitle="@string/chat_setting_to_top"
        app:switchItemTitleColor="@color/black"
        app:switchItemTitleSize="16sp" />

    <io.agora.chatdemo.general.widget.ArrowItemView
        app:layout_constraintTop_toBottomOf="@id/setting_target_translation"
        android:id="@+id/setting_auto_translation"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:foreground="@drawable/ease_ripple_click_gray"
        app:arrowItemArrowSrc="@drawable/arrow_right"
        app:arrowItemAvatarHeight="32dp"
        app:arrowItemAvatarSrc="@drawable/chat_settings_auto_translation"
        app:arrowItemContentColor="@color/color_light_gray_999999"
        app:arrowItemContentSize="16sp"
        app:arrowItemTitleStyle="bold"
        app:arrowItemAvatarWidth="32dp"
        app:arrowItemShowAvatar="true"
        app:arrowItemTitle="@string/chat_setting_auto_translation"
        app:arrowItemTitleSize="@dimen/text_size_big" />

</LinearLayout>